--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,7 +60,8 @@
 }
 
 h1, h2, h3, h4{
-	font-family: 'garamond-premier-pro-display', sans-serif;
+	//font-family: 'garamond-premier-pro-display', sans-serif;
+	font-family: 'Gloock', serif;
 	font-weight: 400;
 }
 
