--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@
 .estates_header {
   width: 100%;
   height: 83px;
-  background-color: #171b33;
+  background-color: rgba(23, 27, 51, 0.9);
   position: fixed;
   top: 0;
   left: 0;
@@ -248,50 +248,45 @@
         text-align: left;
         margin-top: auto;
         margin-bottom: auto;
-        max-width: 514px;
-        font-size: 75px;
-        line-height: 68px;
+        max-width: 700px;
+        font-size: 70px;
+        line-height: 63px;
         letter-spacing: 1.06; } }
     @media (min-width: 1200px) {
       .estates_hero__h1 {
-        max-width: 609px;
-        font-size: 78px;
+        max-width: 650px;
+        font-size: 75px;
         line-height: 75px; } }
     @media (min-width: 1300px) {
       .estates_hero__h1 {
         max-width: 659px;
-        font-size: 84px;
-        line-height: 81px; } }
+        font-size: 75px;
+        line-height: 75px; } }
     @media (min-width: 1400px) {
       .estates_hero__h1 {
         max-width: 709px;
-        font-size: 90px;
-        line-height: 87px; } }
+        font-size: 78px;
+        line-height: 81px; } }
     @media (min-width: 1500px) {
       .estates_hero__h1 {
         max-width: 759px;
-        font-size: 96px;
-        line-height: 93px; } }
+        font-size: 90px;
+        line-height: 87px; } }
     @media (min-width: 1600px) {
       .estates_hero__h1 {
         max-width: 809px;
-        font-size: 101px;
-        line-height: 98px; } }
+        font-size: 96px;
+        line-height: 93px; } }
     @media (min-width: 1700px) {
       .estates_hero__h1 {
         max-width: 859px;
-        font-size: 107px;
+        font-size: 101px;
         line-height: 98px; } }
     @media (min-width: 1800px) {
       .estates_hero__h1 {
-        max-width: 909px;
+        max-width: 950px;
         font-size: 114px;
-        line-height: 111px; } }
-    @media (min-width: 1900px) {
-      .estates_hero__h1 {
-        max-width: 910px;
-        font-size: 120px;
-        line-height: 117px; } }
+        line-height: 98px; } }
 
 .estates_estates {
   width: 100%;
